<resources>
    <string name="app_name" translatable="false">Dixit Companion</string>
    <string name="BtnNewGame">Nouvelle partie</string>
    <string name="labelPlayerChoice">Choix des joueurs</string>
    <string name="add_player_shadowInput">Nom</string>
    <string name="addPlayer_label">Joueur</string>
    <string name="addPlayer_hint">Nom</string>
    <string name="btnContinue">Continuer</string>
    <string name="pointsToWinTitle">Nombre de points pour gagner</string>
    <string name="PointsToWinDefaultValue" translatable="false">30</string>
    <string name="HomescreenTitle" translatable="false">Dixit Companion</string>
    <string name="labelStoryTellerChoice">Qui est le conteur ?</string>
    <string name="everyoneFoundTitle">Tout le monde a trouvé la bonne carte ?</string>
    <string name="everyOneFoundText">Tout le monde a trouvé ?</string>
    <string name="noOneFoundText">Personne n\'a trouvé ?</string>
    <string name="noOneFoundLabel">Personne n\'a trouvé ?</string>
    <string name="everyOneFoundLabel">Tout le monde a trouvé ?</string>
    <string name="everyoneFoundYesLabel">OUI</string>
    <string name="everyoneFoundNoLabel">NON</string>
    <string name="endTurnTitle">Fin du tour !</string>
    <string name="whoDidFindLabel">Qui a trouvé la bonne carte ?</string>
    <string name="turnNumberPrefix">Tour n°</string>
    <string name="nextPlayer">Joueur suivant</string>
    <string name="EndGameButtonText">Fin de la partie</string>
    <string name="notEnoughPlayers">Il faut au moins être trois pour jouer à Dixit !</string>
    <string name="wonTheGame"> a gagné la partie !</string>
</resources>
