<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.turn.EveryoneFoundActivity">

    <TextView
        android:id="@+id/everyoneFoundActivity"
        android:layout_width="287dp"
        android:layout_height="158dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/everyoneFoundTitle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/everyoneFoundYes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#3BD33F"
        android:text="@string/everyoneFoundYesLabel"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:onClick="clickYes"
        app:layout_constraintBottom_toTopOf="@+id/everyoneFoundNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everyoneFoundActivity" />

    <Button
        android:id="@+id/everyoneFoundNo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FCB31C21"
        android:text="@string/everyoneFoundNoLabel"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:onClick="clickNo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/everyoneFoundYes" />


</androidx.constraintlayout.widget.ConstraintLayout>