<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.activity.SelectNumberPointsActivity">

    <TextView
        android:id="@+id/pointsToWinTitle"
        android:layout_width="245dp"
        android:layout_height="91dp"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/pointsToWinTitle"
        android:textColor="@color/backgroundTextColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/turnNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/backgroundTextColor"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pointsToWin"
        android:layout_width="152dp"
        android:layout_height="119dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/PointsToWinDefaultValue"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/backgroundTextColor"
        android:textColorHint="@color/backgroundTextColor"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/SelectNumberPointsContinueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsToWinTitle" />

    <Button
        android:id="@+id/SelectNumberPointsContinueButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="174dp"
        android:layout_height="77dp"
        android:layout_marginBottom="32dp"
        android:background="@color/backgroundButtonColor"
        android:onClick="continueToFirstTurn"
        android:text="@string/btnContinue"
        android:textColor="@color/textButtonColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
